--- a/register.html
+++ b/register.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="register.css">
+</head>
+<body>
+    <h1>Inscription</h1>
+    <div class="container">
+         
+        <form action="register.php" method="post">
+        <div class="form-group">
+        <label for="nom">Nom :</label>
+        <input type="text" id="nom" name="nom" required>
+        </div>
+        <div class="form-group">
+        <label for="prenom">Prénom :</label>
+        <input type="text" id="prenom" name="prenom" required>
+        </div>
+        <div class="form-group">
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+        <label for="mdp">Mot de passe :</label>
+        <input type="password" id="mdp" name="mdp" required>
+        </div>
+        <div class="form-group">
+        <label for="adresse">Adresse :</label>
+        <input type="text" id="adresse" name="adresse" required>
+        </div>
+        <div class="form-group">
+        <label for="telephone">Téléphone :</label>
+        <input type="tel" id="telephone" name="telephone" required>
+        </div>
+        <button type="submit">S'inscrire</button>
+        <p><a href="LoginClient.html">J'ai deja un compte</a></p>
+        </form>
+        </div>
+</body>
+</html>
