--- a/index.html
+++ b/index.html
@@ -45,121 +45,20 @@
         </div>
     </div>
 </section>
+
 <section class="menu" id="menu">
     <div class="titre">
         <h2 class="titre-texte"><span>M</span>enu</h2>
     </div>
     <div class="contenu">
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c1.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c2.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c3.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c4.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c5.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c6.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c7.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/c8.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Special salade</h3>
-            </div>
+        <div id="menu-liste">
+            <!-- Les articles du menu seront affichés ici -->
         </div>
     </div>
- </div>
- <div class="titre">
-    <a href="#" class="btn1">Voir Plus</a>
- </div>
 </section>
-<section class="expert" id="expert">
-    <div class="titre">
-        <h2 class="titre-texte">Nos <span>E</span>xperts</h2>
-    </div>
-    <div class="contenu">
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/equipe1.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Frank olivier</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/equipe2.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Roy leroi</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/equipe3.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Atangana bikoe</h3>
-            </div>
-        </div>
-        <div class="box">
-            <div class="imbox">
-                <img src="./images/equipe4.jpg" alt="">
-            </div>
-            <div class="text">
-                <h3>Yasmine bouba</h3>
-            </div>
-        </div>
-    </div>
- </div>
-</section>
+<!-- ... -->
+<script src="script.js"></script>
+
  <section class="temoignage" id="temoignage">
     <div class="titre blanc">
         <h2 class="titre-texte">Que Disent Nos <span>C</span>lients</h2>
