--- a/restaurateur.html
+++ b/restaurateur.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" type="text/css" href="question.css">
 </head>
 <body>
+    <form action="admin.php" method="post">
     <div class="container">
         <h2>Que voulez vous faire?</h2>
         <p>Veuillez sélectionner ce que vous voulez faire: </p>
         <div class="boutons">
         <button class="btn-client" onclick="window.location.href='AjouterMenu.html'">Ajouter un menu</button><br>
-        <button class="btn-admin" onclick="window.location.href='SupprimerMenu.html'">Supprimer un menu</button><br>
+       
         <button class="btn-admin" onclick="window.location.href='Historique.html'">Historique des commandes</button><br>
         
         </div>
         </div>
+    </form>
 </body>
 </html>
