--- a/LoginClient.html
+++ b/LoginClient.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="LoginClient.css">
 </head>
 <body>
-    <h1>Connexion</h1>
+    <h1>Authentification Client</h1>
     <div class="container">
         <form action="login.php" method="post">
        
