--- a/restaurateur.html
+++ b/restaurateur.html
@@ -11,9 +11,9 @@
         <h2>QUE VOULEZ VOUS FAIRE?</h2>
         <p>Choisissez ce que vous voulez faire:</p>
         <div class="boutons">
-        <button class="btn-client" onclick="window.location.href='admin.html'">Ajouter un menu</button>
-        <button class="btn-client" onclick="window.location.href='afficher_menu.php'">Modifier ou Supprimer un menu</button>
+        <button class="btn-client" onclick="window.location.href='afficher_menu.php'">Gestion du menu</button>
         <button class="btn-admin" onclick="window.location.href='commander.php'">Historique des commandes</button>
+        <button class="btn-admin" onclick="window.location.href='satisfaction.php'">Rapport Satisfaction Client</button>
         </div>
         </div>
 </body>
