--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
       <div class="header-container">
-        <img src="images/food logo.png" alt="Restaurant Logo" class="logo">
+        <img src="logo.jpg" alt="Restaurant Logo" class="logo">
         <h1>Inscription</h1>
       </div>
         <form action="register.php" method="post">
